src/z80asm2/preproc_re.cpp
/* Generated by re2c 1.0.3 */
//-----------------------------------------------------------------------------
// z80asm assembler
// preprocessor
// Copyright (C) Paulo Custodio, 2011-20180
// License: http://www.perlfoundation.org/artistic_license_2_0
//-----------------------------------------------------------------------------
#include "ccdefs.h"

#define YYMAXFILL 10





void Preproc::init_scan(const std::string& text_)
{
    text = text_;
    text.reserve(text.length() + YYMAXFILL);
    p = text.c_str();
}

int Preproc::get_keyword()
{
    const char* YYMARKER;
    auto p0 = p;

    {
        char yych;
        yych = *p;

        switch (yych) {
        case '\t':
        case '\n':
        case '\v':
        case '\f':
        case '\r':
        case ' ':
            goto yy4;

        case 'I':
        case 'i':
            goto yy5;

        default:
            goto yy2;
        }

yy2:
        ++p;
yy3: {
            p = p0;
            return NONE;
        }
yy4:
        yych = *(YYMARKER = ++p);

        switch (yych) {
        case '\t':
        case '\n':
        case '\v':
        case '\f':
        case '\r':
        case ' ':
            goto yy6;

        case 'I':
        case 'i':
            goto yy9;

        default:
            goto yy3;
        }

yy5:
        yych = *(YYMARKER = ++p);

        switch (yych) {
        case 'N':
        case 'n':
            goto yy10;

        default:
            goto yy3;
        }

yy6:
        yych = *++p;

        switch (yych) {
        case '\t':
        case '\n':
        case '\v':
        case '\f':
        case '\r':
        case ' ':
            goto yy6;

        case 'I':
        case 'i':
            goto yy9;

        default:
            goto yy8;
        }

yy8:
        p = YYMARKER;
        goto yy3;
yy9:
        yych = *++p;

        switch (yych) {
        case 'N':
        case 'n':
            goto yy10;

        default:
            goto yy8;
        }

yy10:
        yych = *++p;

        switch (yych) {
        case 'C':
        case 'c':
            goto yy11;

        default:
            goto yy8;
        }

yy11:
        yych = *++p;

        switch (yych) {
        case 'L':
        case 'l':
            goto yy12;

        default:
            goto yy8;
        }

yy12:
        yych = *++p;

        switch (yych) {
        case 'U':
        case 'u':
            goto yy13;

        default:
            goto yy8;
        }

yy13:
        yych = *++p;

        switch (yych) {
        case 'D':
        case 'd':
            goto yy14;

        default:
            goto yy8;
        }

yy14:
        yych = *++p;

        switch (yych) {
        case 'E':
        case 'e':
            goto yy15;

        default:
            goto yy8;
        }

yy15:
        ++p;
        {
            return INCLUDE;
        }
    }

}

#define PUSH(new_text)                      \
            auto line = std::make_shared<Line>(cur_line.filename, cur_line.line_nr, new_text);  \
            lines.push_back(line);

#define DO_LABEL()                          \
            if (true /*is_opcode(p3, p4)*/) {       \
                std::string new_text = std::string(".") + std::string(p1, p2);  \
                PUSH(new_text);             \
                p = p3;                     \
                state = at_opcode;          \
                continue;                   \
            }                               \
            else {                          \
                p = p1;                     \
                state = at_opcode;          \
                continue;                   \
            }

#define DO_INCLUDE()                        \
            std::string incfile(p1, p2);    \
            if (!input.push_file(incfile))  \
                return;                     \
            state = at_end;                 \
            continue;

void Preproc::parse()
{
    const char* YYMARKER, *p1, *p2, *p3, *p4, *yyt1, *yyt2, *yyt3;
    const Line& cur_line = input.cur_line();
    std::string text(cur_line.text);
    text.reserve(text.length() + YYMAXFILL);        // needed by re2c
    const char* p = text.c_str();
    enum { at_bol, at_opcode, at_end };

    for (int state = at_bol; *p; ) {
        if (state == at_bol) {

            {
                char yych;
                unsigned int yyaccept = 0;
                yych = *p;

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                    goto yy21;

                case '#':
                case '%':
                case '*':
                    goto yy22;

                case '.':
                    goto yy23;

                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    yyt1 = yyt3 = p;
                    goto yy24;

                case 'I':
                case 'i':
                    yyt1 = yyt3 = p;
                    goto yy25;

                default:
                    goto yy19;
                }

yy19:
                ++p;
yy20: {
                    state = at_opcode;
                    continue;
                }
yy21:
                yyaccept = 0;
                yych = *(YYMARKER = ++p);

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                case '.':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy27;

                default:
                    goto yy20;
                }

yy22:
                yyaccept = 0;
                yych = *(YYMARKER = ++p);

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                    goto yy33;

                case 'I':
                case 'i':
                    goto yy35;

                default:
                    goto yy20;
                }

yy23:
                yyaccept = 0;
                yych = *(YYMARKER = ++p);

                switch (yych) {
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    yyt1 = p;
                    goto yy36;

                default:
                    goto yy20;
                }

yy24:
                yyaccept = 0;
                yych = *(YYMARKER = ++p);

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case ':':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy41;

                default:
                    goto yy20;
                }

yy25:
                yyaccept = 0;
                yych = *(YYMARKER = ++p);

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case ':':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy41;

                case 'N':
                case 'n':
                    goto yy44;

                default:
                    goto yy20;
                }

yy26:
                yych = *++p;
yy27:

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                    goto yy26;

                case '.':
                    goto yy29;

                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    yyt3 = p;
                    goto yy30;

                case 'I':
                case 'i':
                    yyt3 = p;
                    goto yy32;

                default:
                    goto yy28;
                }

yy28:
                p = YYMARKER;

                switch (yyaccept) {
                case 0:
                    goto yy20;

                case 1:
                    goto yy71;

                default:
                    goto yy83;
                }

yy29:
                yych = *++p;

                switch (yych) {
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    yyt1 = p;
                    goto yy36;

                default:
                    goto yy28;
                }

yy30:
                yych = *++p;
yy31:

                switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy30;

                case ':':
                    yyt1 = p;
                    goto yy42;

                default:
                    goto yy28;
                }

yy32:
                yych = *++p;

                switch (yych) {
                case 'N':
                case 'n':
                    goto yy45;

                default:
                    goto yy31;
                }

yy33:
                yych = *++p;

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                    goto yy33;

                case 'I':
                case 'i':
                    goto yy35;

                default:
                    goto yy28;
                }

yy35:
                yych = *++p;

                switch (yych) {
                case 'N':
                case 'n':
                    goto yy46;

                default:
                    goto yy28;
                }

yy36:
                yych = *++p;

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                    yyt2 = p;
                    goto yy47;

                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy36;

                default:
                    goto yy28;
                }

yy38:
                yych = *++p;

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                    goto yy38;

                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    yyt3 = p;
                    goto yy49;

                default:
                    goto yy28;
                }

yy40:
                yych = *++p;
yy41:

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                    yyt2 = p;
                    goto yy38;

                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy40;

                case ':':
                    yyt1 = p;
                    goto yy42;

                default:
                    goto yy28;
                }

yy42:
                yych = *++p;

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                    goto yy42;

                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    yyt2 = p;
                    goto yy52;

                default:
                    goto yy28;
                }

yy44:
                yych = *++p;

                switch (yych) {
                case 'C':
                case 'c':
                    goto yy55;

                default:
                    goto yy41;
                }

yy45:
                yych = *++p;

                switch (yych) {
                case 'C':
                case 'c':
                    goto yy56;

                default:
                    goto yy31;
                }

yy46:
                yych = *++p;

                switch (yych) {
                case 'C':
                case 'c':
                    goto yy57;

                default:
                    goto yy28;
                }

yy47:
                yych = *++p;

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                    goto yy47;

                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    yyt3 = p;
                    goto yy58;

                default:
                    goto yy28;
                }

yy49:
                yych = *++p;

                switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy49;

                default:
                    goto yy51;
                }

yy51:
                p1 = yyt1;
                p2 = yyt2;
                p3 = yyt3;
                p4 = p;
                {
                    DO_LABEL();
                }
yy52:
                yych = *++p;

                switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy52;

                default:
                    goto yy54;
                }

yy54:
                p1 = yyt3;
                p2 = yyt1;
                p3 = yyt2;
                p4 = p;
                {
                    DO_LABEL();
                }
yy55:
                yych = *++p;

                switch (yych) {
                case 'L':
                case 'l':
                    goto yy61;

                default:
                    goto yy41;
                }

yy56:
                yych = *++p;

                switch (yych) {
                case 'L':
                case 'l':
                    goto yy62;

                default:
                    goto yy31;
                }

yy57:
                yych = *++p;

                switch (yych) {
                case 'L':
                case 'l':
                    goto yy63;

                default:
                    goto yy28;
                }

yy58:
                yych = *++p;

                switch (yych) {
                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy58;

                default:
                    goto yy60;
                }

yy60:
                p1 = yyt1;
                p2 = yyt2;
                p3 = yyt3;
                p4 = p;
                {
                    DO_LABEL();
                }
yy61:
                yych = *++p;

                switch (yych) {
                case 'U':
                case 'u':
                    goto yy64;

                default:
                    goto yy41;
                }

yy62:
                yych = *++p;

                switch (yych) {
                case 'U':
                case 'u':
                    goto yy65;

                default:
                    goto yy31;
                }

yy63:
                yych = *++p;

                switch (yych) {
                case 'U':
                case 'u':
                    goto yy66;

                default:
                    goto yy28;
                }

yy64:
                yych = *++p;

                switch (yych) {
                case 'D':
                case 'd':
                    goto yy67;

                default:
                    goto yy41;
                }

yy65:
                yych = *++p;

                switch (yych) {
                case 'D':
                case 'd':
                    goto yy68;

                default:
                    goto yy31;
                }

yy66:
                yych = *++p;

                switch (yych) {
                case 'D':
                case 'd':
                    goto yy69;

                default:
                    goto yy28;
                }

yy67:
                yych = *++p;

                switch (yych) {
                case 'E':
                case 'e':
                    goto yy70;

                default:
                    goto yy41;
                }

yy68:
                yych = *++p;

                switch (yych) {
                case 'E':
                case 'e':
                    goto yy72;

                default:
                    goto yy31;
                }

yy69:
                yych = *++p;

                switch (yych) {
                case 'E':
                case 'e':
                    goto yy73;

                default:
                    goto yy28;
                }

yy70:
                yyaccept = 1;
                yych = *(YYMARKER = ++p);

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                    yyt2 = p;
                    goto yy74;

                case '"':
                    yyt1 = p;
                    goto yy76;

                case '\'':
                    yyt1 = p;
                    goto yy77;

                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case ':':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy41;

                case '<':
                    yyt1 = p;
                    goto yy78;

                default:
                    goto yy71;
                }

yy71: {
                    err.e_syntax(input);
                    return;
                }
yy72:
                yyaccept = 1;
                yych = *(YYMARKER = ++p);

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                    goto yy79;

                case '"':
                    yyt1 = p;
                    goto yy76;

                case '\'':
                    yyt1 = p;
                    goto yy77;

                case '0':
                case '1':
                case '2':
                case '3':
                case '4':
                case '5':
                case '6':
                case '7':
                case '8':
                case '9':
                case ':':
                case 'A':
                case 'B':
                case 'C':
                case 'D':
                case 'E':
                case 'F':
                case 'G':
                case 'H':
                case 'I':
                case 'J':
                case 'K':
                case 'L':
                case 'M':
                case 'N':
                case 'O':
                case 'P':
                case 'Q':
                case 'R':
                case 'S':
                case 'T':
                case 'U':
                case 'V':
                case 'W':
                case 'X':
                case 'Y':
                case 'Z':
                case '_':
                case 'a':
                case 'b':
                case 'c':
                case 'd':
                case 'e':
                case 'f':
                case 'g':
                case 'h':
                case 'i':
                case 'j':
                case 'k':
                case 'l':
                case 'm':
                case 'n':
                case 'o':
                case 'p':
                case 'q':
                case 'r':
                case 's':
                case 't':
                case 'u':
                case 'v':
                case 'w':
                case 'x':
                case 'y':
                case 'z':
                    goto yy31;

                case '<':
                    yyt1 = p;
                    goto yy78;

                default:
                    goto yy71;
                }

yy73:
                yyaccept = 1;
                yych = *(YYMARKER = ++p);

                switch (yych) {
                case '\t':
                case '\n':
                case '\v':
                case '\f':
                case '\r':
                case ' ':
                    goto yy79;

                case '"':
                    yyt1 = p;
                    goto yy76;

                case '\'':
                    yyt1 = p;
                    goto yy77;

                case '<':
                    yyt1 = p;
                    goto yy78;

                default:
                    goto yy71;
                }

yy74:
                yych = *++p;

                switch (yych) {
                case 0x00:
                case ';':
                    goto yy71;
